--- a/style.css
+++ b/style.css
@@ -254,3 +254,8 @@
     border-radius: 10px;
     height: 50%;
   }
+ .sec4{
+    text-align: center;
+    padding: 15px;
+    background-color: #32ff7a57;
+  }
