--- a/style.css
+++ b/style.css
@@ -259,3 +259,13 @@
     padding: 15px;
     background-color: #32ff7a57;
   }
+.sec5{
+    text-align: center;
+    padding: 15px;
+    background-color: #ff813257;
+  }
+
+  .video-box{
+    border-radius: 5px;
+    margin-top: 10px;
+  }
